# pack-my-sprites

./: .gitignore  CHANGELOG  CMakeLists.txt  INSTALL  Makefile  README  README.md
apps/: CMakeLists-auto-pack-my-sprites.txt  CMakeLists-pack-my-sprites.txt  CMakeLists.txt
apps/include/pms/app/: general_program_options.hpp  pack.hpp  packer.hpp  packer_options.hpp  packer_program_options.hpp  version.hpp
apps/pms/: CMakeLists.txt  application.hpp  version.hpp
apps/pms/code/: application.cpp  main.cpp
apps/script/: common.scm
apps/src/pms/app/: auto_pack_my_sprites.cpp  general_program_options.cpp  pack.cpp  pack_my_sprites.cpp  packer.cpp  packer_options.cpp  packer_program_options.cpp
desktop/: CMakeLists.txt
desktop/man/: CMakeLists.txt  auto-pack-my-sprites.sgml  (+1 more)
modules/: CMakeLists.txt
modules/app/: CMakeLists.txt
modules/app/include/pms/app/: atlas_format.hpp  general_program_options.hpp  pack.hpp  packer.hpp  packer_options.hpp  version.hpp
modules/app/src/pms/app/: general_program_options.cpp  pack.cpp  packer.cpp  packer_options.cpp  packer_program_options.cpp
modules/files/: CMakeLists.txt
modules/files/include/pms/files/: is_fully_qualified.hpp
modules/files/src/pms/files/: is_fully_qualified.cpp
modules/files/tests/: CMakeLists.txt
modules/files/tests/pms/files/: is_fully_qualified.cpp
modules/generators/: CMakeLists.txt
modules/generators/include/pms/generators/: color_mode.hpp  css.hpp  plist.hpp  png.hpp  rotation_direction.hpp  spine.hpp  spritepos.hpp
modules/generators/include/pms/generators/detail/: working_directory.hpp
modules/generators/src/pms/generators/: css.cpp  plist.cpp  png.cpp  spine.cpp  spritepos.cpp
modules/generators/src/pms/generators/detail/: working_directory.cpp
modules/gimp/: CMakeLists.txt
modules/gimp/include/pms/gimp/: system_interface.hpp
modules/gimp/src/pms/gimp/: system_interface.cpp
modules/layout/: CMakeLists.txt
modules/layout/include/pms/layout/: atlas.hpp  atlas_page.hpp  build.hpp  description.hpp  sprite_sheet.hpp
modules/layout/src/pms/layout/: atlas.cpp  atlas_page.cpp  build.cpp  description.cpp  sprite_sheet.cpp
modules/layout/tests/: CMakeLists.txt
modules/layout/tests/pms/layout/: atlas_page.cpp  build.cpp  description.cpp
modules/resources/: CMakeLists.txt
modules/resources/include/pms/resources/: image.hpp  image_mapping.hpp  layer.hpp
modules/resources/src/pms/resources/: image.cpp  image_mapping.cpp
modules/resources/tests/: CMakeLists.txt
modules/resources/tests/pms/resources/: image.cpp
modules/serialization/: CMakeLists.txt
modules/serialization/include/pms/serialization/: read_spritedesc.hpp
modules/serialization/include/pms/serialization/spritedesc/: grammar.hpp  grammar.tpp  node_parser.hpp  node_parser_atlas.hpp  node_parser_file.hpp  node_parser_image_entry.hpp  node_parser_image_size.hpp  node_parser_sprite_declaration.hpp  node_parser_sprite_description_base.hpp  node_parser_sprite_sheet.hpp  parser.hpp
modules/serialization/src/pms/serialization/: read_spritedesc.cpp
modules/serialization/src/pms/serialization/spritedesc/: node_parser.cpp  node_parser_atlas.cpp  node_parser_file.cpp  node_parser_image_entry.cpp  node_parser_image_size.cpp  node_parser_sprite_declaration.cpp  node_parser_sprite_description_base.cpp  node_parser_sprite_sheet.cpp  parser.cpp
src/: CMakeLists.txt
src/pms/: CMakeLists.txt  application.hpp  css_generator.hpp  gimp_interface.hpp  grammar.hpp  image_generator.hpp  image_info.hpp  image_map.hpp  layer_info.hpp  parser.hpp  placement_order.hpp  plist_generator.hpp  sprite_sheet.hpp  sprite_sheet_builder.hpp  spritedesc.hpp  spritedesc_collection.hpp  spritepos_generator.hpp  working_directory.hpp  xcf_info.hpp  xcf_map.hpp
src/pms/bin-packing/: MaxRectsBinPack.cpp  MaxRectsBinPack.h
src/pms/code/: application.cpp  css_generator.cpp  gimp_interface.cpp  image_generator.cpp  image_info.cpp  image_map.cpp  parser.cpp  plist_generator.cpp  sprite_sheet.cpp  sprite_sheet_builder.cpp  spritedesc.cpp  spritedesc_collection.cpp  spritepos_generator.cpp  working_directory.cpp  xcf_info.cpp  xcf_map.cpp
src/pms/impl/: grammar.tpp  spritedesc.tpp
src/pms/node_parser/: node_parser.hpp  node_parser_file.hpp  node_parser_image_entry.hpp  node_parser_image_size.hpp  node_parser_layer_to_sprite.hpp  node_parser_sprite_declaration.hpp  node_parser_sprite_description_base.hpp  node_parser_sprite_sheet.hpp  node_parser_xcf_entry.hpp
src/pms/node_parser/code/: node_parser.cpp  node_parser_file.cpp  node_parser_image_entry.cpp  node_parser_image_size.cpp  node_parser_layer_to_sprite.cpp  node_parser_sprite_declaration.cpp  node_parser_sprite_description_base.cpp  node_parser_sprite_sheet.cpp  node_parser_xcf_entry.cpp
src/script/: common.scm  info.scm
src/sdc/: CMakeLists.txt  application.hpp  gimp_interface.hpp  grammar.hpp  image_generator.hpp  layer_info.hpp  makefile_generator.hpp  parser.hpp  placement_order.hpp  plist_generator.hpp  sprite_sheet.hpp  sprite_sheet_builder.hpp  spritedesc.hpp  spritedesc_collection.hpp  spritepos_generator.hpp  version.hpp  working_directory.hpp  xcf_info.hpp  xcf_map.hpp
src/sdc/code/: application.cpp  gimp_interface.cpp  image_generator.cpp  main.cpp  makefile_generator.cpp  parser.cpp  plist_generator.cpp  sprite_sheet.cpp  sprite_sheet_builder.cpp  spritedesc.cpp  spritedesc_collection.cpp  spritepos_generator.cpp  working_directory.cpp  xcf_info.cpp  xcf_map.cpp
src/sdc/impl/: grammar.tpp  spritedesc.tpp
src/sdc/node_parser/: node_parser.hpp  node_parser_file.hpp  node_parser_image_size.hpp  node_parser_layer_to_sprite.hpp  node_parser_sprite_declaration.hpp  node_parser_sprite_description_base.hpp  node_parser_sprite_sheet.hpp  node_parser_xcf_entry.hpp
src/sdc/node_parser/code/: node_parser.cpp  node_parser_file.cpp  node_parser_image_size.cpp  node_parser_layer_to_sprite.cpp  node_parser_sprite_declaration.cpp  node_parser_sprite_description_base.cpp  node_parser_sprite_sheet.cpp  node_parser_xcf_entry.cpp
src/wrapper/: auto-pack-my-sprites
(+39 files in other folders)
