if( NOT PMS_INSTALL_EXECUTABLE_DIR )
  set( PMS_INSTALL_EXECUTABLE_DIR bin )
endif()

if( NOT PMS_DEFAULT_SCHEME_PATH )
  set(
    PMS_DEFAULT_SCHEME_PATH
    "${CMAKE_INSTALL_PREFIX}/${PMS_INSTALL_SCRIPT_DIR}"
    )
endif()

install(
  FILES wrapper/auto-pack-my-sprites
  DESTINATION ${PMS_INSTALL_EXECUTABLE_DIR}

  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
  GROUP_READ GROUP_EXECUTE
  WORLD_READ WORLD_EXECUTE
)

include( CMakeLists-pack-my-sprites.txt )
