install(
  DIRECTORY script
  DESTINATION ${PMS_INSTALL_RESOURCES_DIR}

  FILE_PERMISSIONS OWNER_READ OWNER_WRITE
  GROUP_READ
  WORLD_READ

  DIRECTORY_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
  GROUP_READ GROUP_EXECUTE
  WORLD_READ WORLD_EXECUTE

  FILES_MATCHING
  PATTERN "*.scm"
  PATTERN "CMakeFiles" EXCLUDE
 )

if( NOT PMS_DEFAULT_SCHEME_PATH )
  set(
    PMS_DEFAULT_SCHEME_PATH
    "${CMAKE_INSTALL_PREFIX}/${PMS_INSTALL_RESOURCES_DIR}/script"
    )
endif()

install(
  FILES wrapper/auto-pack-my-sprites
  DESTINATION ${PMS_INSTALL_EXECUTABLE_DIR}

  PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
  GROUP_READ GROUP_EXECUTE
  WORLD_READ WORLD_EXECUTE
)

subdirs(pms)
